fix canvg snapshot code in case of developer includes non-svg code. fix button-group covers iframe issue

--- a/src/styl/dev.styl
+++ b/src/styl/dev.styl
@@ -350,10 +350,14 @@
   width: 100%
   overflow: hidden
   position: relative
+  padding-bottom: 40px
+  background: #f9f9f9
   .btn-group
     position: absolute
     bottom: 5px
     right: 5px
+  iframe
+    border-bottom: 1px solid #ddd
 
 #code-editor.fullscreen, #visualization-canvas2.fullscreen
   position: fixed
